--- a/thilagan/thilagan.html
+++ b/thilagan/thilagan.html
@@ -63,7 +63,9 @@
             <div class="mt-4 flex justify-center space-x-4">
                 <a href="mailto:kthilagan177@gmail.com">Email</a>
                 <a href="https://scholar.google.com/citations?user=5lldYecAAAAJ" target="_blank">Google Scholar</a>
-                <a href="https://orcid.org/0000-0001-7695-8133" target="_blank">ORCID</a>
+                <a href="https://orcid.org/0000-0001-7695-8133" target="_blank">
+                    <img src="ORCID_logo.png" alt="ORCID iD" style="height: 24px; width: auto;">
+                </a>
             </div>
         </div>
     </header>
