--- a/thilagan/thilagan.html
+++ b/thilagan/thilagan.html
@@ -65,6 +65,12 @@
                 <a href="https://scholar.google.com/citations?user=5lldYecAAAAJ" target="_blank">Google Scholar</a>
                 <a href="https://orcid.org/0000-0001-7695-8133" target="_blank">
                     <img src="ORCID_logo.png" alt="ORCID iD" style="height: 24px; width: auto;">
+                </a> 
+                <a href="https://www.linkedin.com/in/thilagan-k/" target="_blank">
+                    <img src="LinkdIn_logo.png" alt="LinkdIn" style="height: 24px; width: auto;">
+                </a>    
+                <a href="https://www.researchgate.net/profile/Thilagan-Kannappan?ev=hdr_xprf" target="_blank">
+                    <img src="ResearchGate_logo.png" alt="ResearchGate" style="height: 24px; width: auto;">
                 </a>
             </div>
         </div>
