--- a/thilagan/thilagan.html
+++ b/thilagan/thilagan.html
@@ -61,8 +61,12 @@
             <h1 class="text-5xl font-bold mb-2">Dr. Thilagan K.</h1>
             <p class="text-xl">Researcher in Solar Energy and Desalination</p>
             <div class="mt-4 flex justify-center space-x-4">
-                <a href="mailto:kthilagan177@gmail.com">Email</a>
-                <a href="https://scholar.google.com/citations?user=5lldYecAAAAJ" target="_blank">Google Scholar</a>
+                <a href="mailto:kthilagan177@gmail.com">
+                    <img src="gmail_logo.png" alt="Gmail" style="height: 24px; width: auto;">
+                </a>
+                <a href="https://scholar.google.com/citations?user=5lldYecAAAAJ" target="_blank">
+                    <img src="Google_Scholar_logo.png" alt="Gscholar" style="height: 24px; width: auto;">
+                </a>
                 <a href="https://orcid.org/0000-0001-7695-8133" target="_blank">
                     <img src="ORCID_logo.png" alt="ORCID iD" style="height: 24px; width: auto;">
                 </a> 
